# logic

./: README  README.md  logic.cabal
src/: Logic.hs
src/Data/: Stream.hs
src/Logic/: Checked.hs  Formula.hs  GADT.hs  PrenexTree.hs  Term.hs
src/Logic/Checked/: Formula.hs  Spec.hs
src/Logic/Formula/: GADT.hs  Spec.hs
tests/: Main.hs
tests/Test/: Arbitrary.hs  Concrete.hs  Properties.hs  Var.hs
